--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,7 +125,66 @@ h6 {
   padding: 15px;
   margin-bottom: 24px;
 }
+/* skills */
+.skillcustom {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+}
+.skillcustom:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: var(--accent-color);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
 
+#skills {
+  font-family: Arial, sans-serif;
+  margin: 30px;
+}
+
+.skill-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.skill-item i {
+  color: #2c3e50;
+  margin-right: 20px;
+  font-size: 2rem; /* Adjust the size as needed */
+
+}
+
+.technical-skills ul {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 20px;
+
+}
+
+.technical-skills li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.technical-skills li i {
+  margin-right: 18px;
+  color: #3498db;
+  font-size: 2rem; /* Adjust the size as needed */
+
+}
+/* /skills */
 .php-email-form .loading:before {
   content: "";
   display: inline-block;
